2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- New images from Guillaume Rousse (released under GPL) are
	  replacing all undersea images for clickgame.

	* boards/clickgame.xml.in:
	* boards/clickgame/README:
	* boards/clickgame/sea1.jpg:
	* boards/clickgame/sea2.jpg:
	* boards/clickgame/sea3.jpg:
	* boards/clickgame/sea4.jpg:
	* boards/clickgame/sea5.jpg:
	* boards/clickgame/sea6.jpg:
	* src/boards/clickgame.c: (clickgame_next_level):

2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added eraser sounds from tuxpaint.
	- shapegame now uses the default cursor

	* boards/sounds/eraser1.wav:
	* boards/sounds/eraser2.wav:
	* src/boards/erase.c: (erase_one_item):
	* src/boards/shapegame.c: (start_board), (end_board),
	(add_shape_to_list_of_shapes), (conf_ok), (config_start):

2006-12-04  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added Korean support
	- Now fullscreen no more the default.

	* boards/flags/ko.png:
	* configure.in:
	* docs/gcompris2spip.pl:
	* src/gcompris/config.c:
	* src/gcompris/properties.c: (gc_prop_new):

2006-12-03  Yves Combe  <yves@ycombe.net>

	By Miguel DE IZARRA:
	- shapegame: fix zommx/zoomy pb.
	- scale.c: new version of scale game

	* boards/scales/balance.png:
	* boards/scales/bras.png:
	* boards/scales/plateau.png:
	* boards/scalesboard.xml.in:
	* src/boards/Makefile.am:
	* src/boards/hanoi.c: (hanoi_create_item):
	* src/boards/scale.c: (pause_board), (start_board), (end_board),
	(set_level), (is_our_board), (get_total_weight),
	(scale_anim_plateau), (scale_item_event), (scale_list_add_weight),
	(scale_next_level), (scale_destroy_all_items), (game_won),
	(process_ok):
	* src/boards/shapegame.c: (item_event_drag):

2006-12-01  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/erase.c: (erase_destroy_all_items),
	(erase_create_item), (erase_one_item), (item_event): Feature enhancement by Joshua N Pritikin
	now there is a miminum time to spend on each block to avoid children to move the mouse rapidly